# proofswe

./: .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum  package.json  railway.json
.github/workflows/: ci.yml  reader-long.yml  release.yml
cmd/proofswe/: AGENTS.md  main.go  main_test.go
crates/adapter-claude-code/: Cargo.toml
crates/adapter-codex/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/proofswe-core/: Cargo.toml
crates/xtask/: Cargo.toml
docs/: CAPTURE.md  METHODOLOGY.md  SIGNALS.md
internal/cli/: AGENTS.md  adapters.go  agent.go  agent_test.go  cli.go  cli_test.go  consent.go  consent_test.go  contribute.go  resolve.go  (+31 more)
media/: README.md
npm/: postinstall.js  test-postinstall.mjs  test-wrapper.mjs
schema/: normalized-event.v1.json
scripts/: prepare-npm-release.mjs
testing/: codex-bulk-upload-repo-menu.md  codex-codex-adapter.md  codex-expanded-transcript-signals.md  codex-issue-53-async-judge-db.md  codex-issue-54-github-corpus-publish.md  codex-issue-54-publish-hardening.md  codex-issue-55-npm-submit-ux.md  codex-noise-filter.md  codex-phase-a-task-consent.md  codex-public-corpus-leaderboard.md  codex-relax-reproducibility-gate.md  codex-resolve-phase-issue-9.md  codex-session-utility-scoring.md  core-normalized-event.md  hook-lifecycle.md  issue-2-workspace-scaffold.md  snapshot-phase.md  streaming-jsonl-reader.md  submit-pipeline.md
web/: CLAUDE.md  DESIGN.md  README.md  package-lock.json  package.json
(+86 files in other folders)
