[package]
name = "cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "proofswe"
path = "src/main.rs"

[dependencies]
adapter-claude-code = { path = "../adapter-claude-code" }
adapter-codex = { path = "../adapter-codex" }
anyhow.workspace = true
lexopt.workspace = true
proofswe-core = { path = "../proofswe-core" }
